# dummy-imperative-language

./: README.md  interperter.cabal  specification.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Analyzer.hs  Constant.hs  Interpreter.hs  InterpreterBase.hs  InterpreterBase2.hs  Main.hs  Program.hs  Syntax.hs
