cabal-version:      3.0
name:               interperter
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/githubuser/resits#readme
license:            GPL-3.0-only
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2021 Author name here
category:           Web
build-type:         Simple
extra-source-files: README.md

flag dev
  description: Enable lean development
  default:     False
  manual:      True

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wredundant-constraints
    -Wmissing-home-modules -Wmissing-export-lists -fwarn-unused-imports

  if !flag(dev)
    ghc-options: -Werror

common common-dependencies
  build-depends:

common common-extensions
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

library
  import:           common-extensions
  import:           common-dependencies
  import:           common-ghc-options
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base        >=4.7 && <5
    , containers
    , mtl

  exposed-modules:
    Analyzer
    Constant
    Interpreter
    Syntax

executable interperter
  import:           common-extensions
  import:           common-dependencies
  import:           common-ghc-options
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
    , base         >=4.7 && <5
    , containers
    , interperter
    , mtl

-- InterpreterBase2
